fieldx/tests/uncompilable/1.80/private.stderr
error[E0624]: method `read_foo` is private
 --> tests/uncompilable/private.rs
  |
  |         #[fieldx(private, lazy)]
  |         ------------------------ private method defined here
...
  |     let foo = inner.read_foo();
  |                     ^^^^^^^^ private method
